--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "font-awesome": "~4.5.0",
     "wow": "~1.1.2",
     "animate.css": "animate-css#~3.5.1",
-    "smoothscroll-for-websites": "~1.4.4"
+    "smoothscroll-for-websites": "~1.4.4",
+    "bootstrap": "^3.3.6"
   }
 }
