--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "wow": "~1.1.2",
     "animate.css": "animate-css#~3.5.1",
     "smoothscroll-for-websites": "~1.4.4",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "bxslider": "*"
   }
 }
